DP inversion enhancement (#89)
Arrangement test No. 7 #180259141

XJ pads can correctly render changes of inversion within a DP #180258696

Many pad detail programs call for the same chord moving up or down through different versions in order to create the sound of movement and mask issues related to finite sample lengths etc.
XJ will frequently render pad chord voicings correctly but fail to follow the detail program's instructions to invert a chord up or down.
included is a proposed voicing test to ensure properly fabricating inversions within pad detail programs.

I suspect the answer is something like

1. before crafting the events for an MP sequence, find the overall range of the entire DP program's events and call this DP Range *(XJ currently does this)*
2. for each event in the MP sequence
  a. Know what the range of all previously selected notes picked for this MP sequence, call this MP Range *(XJ currently does this)*
  b. Select the source DP Event (the DPs get looped so each dp event may appear multiple times in an mp sequence—*XJ currently does this*)
  c. Determine how low/high the current DP event is relative to the entire DP Range, and call this DP Event Delta *(new idea)*
  d. When we do inversion seeking, offset the MP Range by the DP Event Delta *(new idea)*